# submodule-updater

./: .editorconfig  .gitignore  README.md  action.yaml  pyproject.toml
.github/workflows/: action-test.yaml
sur/: __init__.py  __main__.py  cli.py  config.py  update.py  workflow_command.py
